# Gambit

./: .svnignore.txt  CHANGES.txt  CMakeLists.txt  NOTES_FOR_PACKAGERS.txt  clean_all.bat  clean_all.sh  clean_moc.bat  clean_moc.sh  clean_ui.sh  setup_env.bat  setup_env.sh  svn_update_revision_number_header.sh  update_translations.bat
artwork/busy_indicator/: busy_indicator.xcf
artwork/notification/: notification.xcf
data/icons/oxygen/: LICENSE.txt
data/nls/: Gambit_nl.qm
doc/screenshots/: wcc2010_sample.pgn
doc/scripts/: gambit-autobuild.sh
doc/scripts/archive/: gambit-update_build_run.sh
engine/gupta/: GNUmakefile  build.sh
engine/gupta/doc/: move_stack_size.txt
engine/gupta/src/: common.h  enforce.c  enforce.h  log.c  uassert.c  uassert.h
engine/gupta/tools/: generate_delta_movements.py
installer/: Gambit-template.iss
src/: .svnignore_recursive.txt  compiler_specific.h  project_info.h
src/Core/: AbnormalTerminationHandler.hh  AbnormalTerminationHandler_win32.cc  EngineEvent.hh  EngineException.cc  EngineException.hh  EngineManager.cc  EngineManager.hh  Event.cc  Event.hh  GambitApplication.cc  GambitApplication.hh  GameController.cc  GameControllerTimer.cc  GameControllerTimer.hh  GnuChessEngine.cc  GnuChessEngine.hh  IEngineCallback.hh  IEventDispatcher.hh  IEventListener.hh  MoveEvent.cc  MoveEvent.hh  PgnDeserializer.cc  PgnDeserializer.hh  ResourcePath.hh  UpdateCheckResult.hh  UpdateChecker.hh  UpdateCheckerTimestamp.cc  UpdateCheckerTimestamp.hh
src/Model/: CastlingFlags.hh  CastlingInfo.cc  CastlingInfo.hh  Coord.hh  EnPassant.cc  Game.cc  MoveHistory.hh  MoveNotation.cc  MoveNotation.hh  Piece.hh  Result.cc  Side.cc
src/Utils/: Cast.hh  Chars.hh  Math.hh  Qt.hh
src/Utils/Math/: isPrime.cc
src/Utils/Qt/: connectWidgets-impl.cc  languageIdString.cc
src/View/: BoardStyle.cc  BoardStyles.cc  BoardStyles.hh  BoardView.hh  BusyIndicatorWidget.cc  GraphicsView.cc  IBoardView.hh  IBoardViewStyleChangeListener.hh  LanguageListWidget.cc  LanguageListWidget.hh  LanguageListWidgetItem.hh  MoveAnimation.hh  NotificationWidget.cc  NotificationWidget.hh  OptionallyPaintedLabel.cc  PreferencesDialog.ui  ProxyAuthenticationDialog.hh  ProxyAuthenticationDialog.ui  ToolBar.cc  ToolBar.hh  UI.cc  UI.hh
src/resource-win32/: manifest.xml
src/sdk/NamedLock/: LockFile_unix.h  non_copyable.h
trunk/: .svnignore.txt  CHANGES.txt  CMakeLists.txt  clean_all.sh  clean_cmake.bat  clean_cmake.sh  clean_moc.bat  clean_moc.sh  clean_ui.bat  release_translations.bat  release_translations.sh  setup_env.bat  svn_update_revision_number_header.bat  update_revision_number_header.bat  update_revision_number_header.sh  update_translations.sh
trunk/artwork/busy_indicator/: busy_indicator_animated.xcf
trunk/cmake/functions/: remove_debug_libraries_from_list.cmake
trunk/data/icons/oxygen/: README.txt
trunk/data/pieces/white/: README.txt
trunk/doc/: contributors.txt
trunk/doc/scripts/: gambit-autobuild.sh
trunk/doc/scripts/archive/: build_cmake.sh
trunk/engine/gupta/: .svnignore.txt  GNUmakefile  build.bat
trunk/engine/gupta/src/: common.h  enforce.c  enforce.h  log.c  log.h  project_info.h  uassert.c  uassert.h
trunk/engine/gupta/src/cecp/: signal.c  signal.h  stdin_io.c
trunk/engine/gupta/src/engine/: bitops.h  board.h  board_public.h  delta_movement_info.c  delta_movement_info.h  eval.c  eval.h  fen.h  gupta.c  gupta.h  move_deltas.c  move_deltas.h  move_public.h  piece.c  piece.h  piece_public.h  range.h  rules.c  rules_public.h  search.c  search.h  search_public.h
trunk/engine/gupta/tools/: generate_delta_movements.py
trunk/installer/: Gambit-template.iss  generate_inno_setup_script.bat
trunk/nls/: Gambit_nl.ts
trunk/src/: .svnignore_recursive.txt  main.cc  project_info.h
trunk/src/Core/: AbnormalTerminationHandler.cc  AbnormalTerminationHandler_unix.cc  Engine.cc  Engine.hh  EngineResult.hh  EventDispatcher.cc  EventDispatcher.hh  GambitApplication.cc  GameController.cc  GameController.hh  GeneralException.cc  GeneralException.hh  GuptaEngine.cc  GuptaEngine.hh  Preferences.cc  Preferences.hh  ResourcePath.cc  UpdateCheckResult.cc  UpdateChecker.cc  debugf.c  debugf.h  enforce.cc  enforce.hh
trunk/src/Model/: Board.cc  Board.hh  CaptureInfo.cc  CaptureInfo.hh  CastlingFlags.cc  Coord.cc  EnPassant.hh  Game.hh  IGameListener.hh  MoveHistory.cc  PgnDatabase.hh  PgnMoveList.cc  PgnMoveList.hh  PgnPlayerType.cc  PgnPlayerType.hh  Piece.cc  Ply.cc  Ply.hh  Result.hh  Rules.cc  Rules.hh  Side.hh
trunk/src/Utils/: String.hh
trunk/src/Utils/Cast/: assert_dynamic_cast-impl.cc  enforce_dynamic_cast-impl.cc
trunk/src/Utils/Math/: findFactorClosestTo.cc
trunk/src/Utils/Qt/: QString_find_first_not_of.cc
trunk/src/Utils/String/: ucfirst.cc
trunk/src/View/: BoardStyle.hh  BoardView.cc  BusyIndicatorWidget.hh  GraphicsScene.cc  GraphicsScene.hh  GraphicsView.hh  IBoardViewInputListener.hh  IPieceAnimation.hh  LanguageListWidgetItem.cc  MissingFileDialog.cc  MissingFileDialog.hh  MoveAnimation.cc  OptionallyPaintedLabel.hh  PieceCaptureAnimation.cc  PieceCaptureAnimation.hh  PieceMovementAnimation.cc  PieceMovementAnimation.hh  PreferencesDialog.cc  PreferencesDialog.hh  ProxyAuthenticationDialog.cc  SpriteManager.cc  SpriteManager.hh  UI.cc
trunk/src/resource-win32/: rsrc.rc
trunk/src/sdk/: quot.h
trunk/src/sdk/NamedLock/: LockFile_unix.cpp  NamedLock.cpp  NamedLock.h  NamedMutex_win32.cpp  NamedMutex_win32.h  README.txt  example.cpp
trunk/src/sdk/Settings/: ISettingsGlue.hh  Settings.cc  SettingsContainerMixin.cc  SettingsElement.cc  SettingsGlue.hh  SettingsIteratorMixin.hh
trunk/src/sdk/Settings/Backends/: SettingsContainer.hh
trunk/src/sdk/Settings/Backends/Boost/: RegexFormatter.hh  RegexReplacement.cc  SettingsContainer.hh
trunk/src/sdk/Settings/Backends/Qt/: SettingsContainer.cc  SettingsIterator.hh
trunk/src/sdk/chess_engine_mediator/: ce_mediator.c  ce_mediator.h
trunk/src/sdk/procspawn/: procspawn_test.c  procspawn_unix.c  procspawn_win32.c
trunk/web/: Building Gambit.html
web/: index.html
(+41 files in other folders)
